[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main/BackgroundTranch.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main/Game2.gd" type="Script" id=3]
[ext_resource path="res://Assets/Textures/cliff.png" type="Texture" id=4]
[ext_resource path="res://Main/GUI/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main/GUI/GameOverPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Main/GUI/StartPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Main/FollowPlayerCamera.gd" type="Script" id=8]

[node name="Game2" type="Node2D"]
script = ExtResource( 3 )

[node name="Tranches" type="Node" parent="."]

[node name="Tranch1" parent="Tranches" instance=ExtResource( 1 )]
position = Vector2( 0, 0 )

[node name="Tranch0" parent="Tranches" instance=ExtResource( 1 )]
position = Vector2( -2048, 0 )

[node name="Tranch2" parent="Tranches" instance=ExtResource( 1 )]
position = Vector2( 2048, 0 )

[node name="Tranch3" parent="Tranches" instance=ExtResource( 1 )]
position = Vector2( 4096, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 48, -168 )
z_index = 3

[node name="cliff" type="Sprite" parent="."]
position = Vector2( 32, -56 )
scale = Vector2( 1.28125, 1 )
z_index = 1
texture = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

[node name="BuyMenu" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="GameOverPanel" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false

[node name="FollowPlayerCamera" type="Camera2D" parent="."]
offset = Vector2( 0, -100 )
current = true
zoom = Vector2( 1.2, 1.2 )
smoothing_enabled = true
smoothing_speed = 100.0
script = ExtResource( 8 )

[node name="GroundZero" type="Node2D" parent="."]
position = Vector2( 0, 1256 )

[node name="MaxAltitude" type="Node2D" parent="."]
position = Vector2( 0, -8832 )
[connection signal="add_money" from="Player" to="." method="_on_Player_add_money"]
[connection signal="game_over" from="Player" to="." method="_on_Player_game_over"]
[connection signal="used_helmet" from="Player" to="." method="_on_Player_used_helmet"]
[connection signal="used_rocket" from="Player" to="." method="_on_Player_used_rocket"]
[connection signal="buy_helmet" from="CanvasLayer/BuyMenu" to="." method="_on_BuyMenu_buy_helmet"]
[connection signal="buy_rocket" from="CanvasLayer/BuyMenu" to="." method="_on_BuyMenu_buy_rocket"]
[connection signal="buy_upgrade" from="CanvasLayer/BuyMenu" to="." method="_on_BuyMenu_buy_upgrade"]
[connection signal="buy_wings" from="CanvasLayer/BuyMenu" to="." method="_on_BuyMenu_buy_wings"]
[connection signal="start_game" from="CanvasLayer/BuyMenu" to="." method="_on_MarginContainer2_start_game"]
[connection signal="restart" from="CanvasLayer/GameOverPanel" to="." method="_on_GameOverPanel_restart"]
